--- a/brewer-configuration/build.gradle
+++ b/brewer-configuration/build.gradle
@@ -8,5 +8,7 @@ dependencies {
     implementation project(':brewer-application')
     implementation project(':brewer-commons')
 
-    implementation('org.springframework.boot:spring-boot-starter')
+    implementation('org.springframework.boot:spring-boot-starter') {
+        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+    }
 }
