--- a/brewer-configuration/src/main/resources/application.properties
+++ b/brewer-configuration/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 # Application
 ####################################################################################################
 app.version=1.0.0-SNAPSHOT
+
+####################################################################################################
+# Logging
+####################################################################################################
+logging.pattern.console=%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} %highlight{${LOG_LEVEL_PATTERN:%5p}}{FATAL=bright red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue, TRACE=black} %style{${PID}}{white} [%style{%-21.21t}{magenta}] %style{%-40.40C{1.}}{cyan} : %m%n%throwable
