#3 Inserir Swagger no modulo web

--- a/brewer-configuration/src/main/resources/application.properties
+++ b/brewer-configuration/src/main/resources/application.properties
@@ -1,9 +1,24 @@
 ####################################################################################################
 # Application
 ####################################################################################################
+# Version
 app.version=1.0.0-SNAPSHOT
+
+# Swagger
+app.swagger.api.info.title=Brewer!
+app.swagger.api.info.version=${app.version}
+app.swagger.api.info.description=Brewer Description
+app.swagger.api.info.contactName=Andre Filipe Barranco
+app.swagger.api.info.contactUrl=https://www.linkedin.com/in/bandrefilipe/
+app.swagger.api.info.contactEmail=b.andrefilipe@gmail.com
+app.swagger.api.info.license=MIT
+app.swagger.api.info.licenseUrl=https://opensource.org/licenses/MIT
 
 ####################################################################################################
 # Logging
 ####################################################################################################
+# Pattern
 logging.pattern.console=%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} %highlight{${LOG_LEVEL_PATTERN:%5p}}{FATAL=bright red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue, TRACE=black} %style{${PID}}{white} [%style{%-21.21t}{magenta}] %style{%-40.40C{1.}}{cyan} : %m%n%throwable
+
+# Level
+logging.level.io.bandrefilipe.brewer=DEBUG
