--- a/adapters/brewer-web/build.gradle
+++ b/adapters/brewer-web/build.gradle
@@ -1,4 +1,15 @@
+ext {
+    setProperty('springfoxVersion', '3.0.0')
+}
+
 dependencies {
     implementation project(':brewer-application')
     implementation project(':brewer-commons')
+
+    // Spring Boot Starter :: Web
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+    }
+    // Springfox Boot Starter
+    implementation("io.springfox:springfox-boot-starter:${springfoxVersion}")
 }
