--- a/brewer-configuration/src/main/resources/application.properties
+++ b/brewer-configuration/src/main/resources/application.properties
@@ -7,7 +7,7 @@ app.version=1.0.0-SNAPSHOT
 # Swagger
 app.swagger.api.info.title=Brewer!
 app.swagger.api.info.version=${app.version}
-app.swagger.api.info.description=Brewer Description
+app.swagger.api.info.description=Brewer web API documentation
 app.swagger.api.info.contactName=Andre Filipe Barranco
 app.swagger.api.info.contactUrl=https://www.linkedin.com/in/bandrefilipe/
 app.swagger.api.info.contactEmail=b.andrefilipe@gmail.com
