--- a/adapters/brewer-web/src/main/resources/brewer-web.properties
+++ b/adapters/brewer-web/src/main/resources/brewer-web.properties
@@ -12,6 +12,14 @@ app.swagger.api.info.license=MIT
 app.swagger.api.info.licenseUrl=https://opensource.org/licenses/MIT
 
 ####################################################################################################
+# Management
+####################################################################################################
+# Endpoints JMX
+management.endpoints.jmx.exposure.include=*
+# Endpoints Web
+management.endpoints.web.exposure.include=health,info
+
+####################################################################################################
 # Server
 ####################################################################################################
 server.port=8080
