--- a/adapters/brewer-web/build.gradle
+++ b/adapters/brewer-web/build.gradle
@@ -1,3 +1,7 @@
+configurations {
+    implementation.exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+}
+
 ext {
     setProperty('springfoxVersion', '3.0.0')
 }
@@ -7,13 +11,11 @@ dependencies {
     implementation project(':brewer-commons')
 
     // Spring Boot Starter :: Actuator
-    implementation('org.springframework.boot:spring-boot-starter-actuator') {
-        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
-    }
+    implementation('org.springframework.boot:spring-boot-starter-actuator')
+    // Spring Boot Starter :: Thymeleaf
+    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     // Spring Boot Starter :: Web
-    implementation('org.springframework.boot:spring-boot-starter-web') {
-        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
-    }
+    implementation('org.springframework.boot:spring-boot-starter-web')
     // Springfox Boot Starter
     implementation("io.springfox:springfox-boot-starter:${springfoxVersion}")
 }
