#15 Melhorando a organizacao do Layout

--- a/adapters/brewer-web/build.gradle
+++ b/adapters/brewer-web/build.gradle
@@ -4,6 +4,7 @@ configurations {
 
 ext {
     setProperty('springfoxVersion', '3.0.0')
+    setProperty('layoutDialectVersion', '2.5.1')
     setProperty('bootstrapVersion', '3.3.7-1')
     setProperty('jqueryVersion', '1.12.4')
     setProperty('webjarsLocatorVersion', '0.40')
@@ -23,6 +24,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     // Springfox Boot Starter
     implementation("io.springfox:springfox-boot-starter:${springfoxVersion}")
+    // Thymeleaf :: Layout Dialect
+    implementation("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:${layoutDialectVersion}")
     // Webjars :: Bootstrap
     implementation("org.webjars:bootstrap:${bootstrapVersion}")
     // Webjars :: jQuery
