#22 Centralizar os arquivos .properties no modulo brewer-configuration

--- a/brewer-configuration/src/main/resources/web.properties
+++ b/brewer-configuration/src/main/resources/web.properties
@@ -1,5 +1,5 @@
 ####################################################################################################
-# Management
+# Actuator :: Management
 ####################################################################################################
 # Endpoints JMX
 management.endpoints.jmx.exposure.include=*
