--- a/adapters/brewer-persistence/build.gradle
+++ b/adapters/brewer-persistence/build.gradle
@@ -1,4 +1,11 @@
 dependencies {
     implementation project(':brewer-application')
     implementation project(':brewer-commons')
+
+    // H2
+    runtimeOnly('com.h2database:h2')
+    // Spring Boot Starter :: Data JPA
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
+        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+    }
 }
