--- a/brewer-configuration/src/main/resources/application.properties
+++ b/brewer-configuration/src/main/resources/application.properties
@@ -4,11 +4,17 @@
 # Version
 app.version=1.0.0-SNAPSHOT
 
+# Spring
+spring.application.name=brewer
+
 ####################################################################################################
 # Logging
 ####################################################################################################
 # Level
 logging.level.io.bandrefilipe.brewer=DEBUG
+
+# Used to check where/when the validation is happening
+#logging.level.org.hibernate.validator=TRACE
 
 # Pattern
 logging.pattern.console=%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} %highlight{${LOG_LEVEL_PATTERN:%5p}}{FATAL=bright red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue, TRACE=black} %style{${PID}}{white} [%style{%-21.21t}{magenta}] %style{%-40.40C{1.}}{cyan} : %m%n%throwable
