#21 Create initial SQL script

--- a/brewer-configuration/src/main/resources/application.properties
+++ b/brewer-configuration/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.application.name=brewer
 ####################################################################################################
 # Level
 logging.level.io.bandrefilipe.brewer=DEBUG
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
 
 # Used to check where/when the validation is happening
 #logging.level.org.hibernate.validator=TRACE
