#31 Criar novo modulo brewer-api para expor endpoints Rest

--- a/brewer-configuration/build.gradle
+++ b/brewer-configuration/build.gradle
@@ -3,11 +3,13 @@ plugins {
 }
 
 dependencies {
+    implementation project(':adapters:brewer-api')
     implementation project(':adapters:brewer-persistence')
     implementation project(':adapters:brewer-web')
     implementation project(':brewer-application')
     implementation project(':brewer-commons')
 
+    // Spring Boot Starter
     implementation('org.springframework.boot:spring-boot-starter') {
         exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
     }
