--- a/adapters/brewer-api/build.gradle
+++ b/adapters/brewer-api/build.gradle
@@ -2,10 +2,16 @@ configurations {
     implementation.exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
 }
 
+ext {
+    setProperty('springfoxVersion', '3.0.0')
+}
+
 dependencies {
     implementation project(':brewer-application')
     implementation project(':brewer-commons')
 
     // Spring Boot Starter :: Web
     implementation('org.springframework.boot:spring-boot-starter-web')
+    // Springfox Boot Starter
+    implementation("io.springfox:springfox-boot-starter:${springfoxVersion}")
 }
