--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+    id 'org.sonarqube' version '3.0'
 }
 
 sourceCompatibility = '11'
@@ -45,5 +46,13 @@ subprojects {
 
     test {
         useJUnitPlatform()
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "bandrefilipe_brewer"
+        property "sonar.organization", "bandrefilipe"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
