--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'jacoco'
     id 'java'
     id 'org.sonarqube' version '3.0'
 }
@@ -21,6 +22,7 @@ subprojects {
 
     apply(plugin: 'io.spring.dependency-management')
     apply(plugin: 'java-library')
+    apply(plugin: 'jacoco')
 
     repositories {
         mavenCentral()
@@ -46,6 +48,11 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        finalizedBy(jacocoTestReport)
+    }
+
+    jacocoTestReport {
+        dependsOn(test)
     }
 }
 
