--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,8 @@ subprojects {
 
     sonarqube {
         properties {
-            property 'sonar.sources', 'src'
+            property 'sonar.sources', 'src/main/java'
+            property 'sonar.tests', 'src/test/java,src/test/resources'
         }
     }
 
@@ -64,9 +65,11 @@ subprojects {
 
 sonarqube {
     properties {
-        property 'sonar.projectKey', 'bandrefilipe_brewer'
-        property 'sonar.organization', 'bandrefilipe'
         property 'sonar.host.url', 'https://sonarcloud.io'
+        property 'sonar.language', 'java'
+        property 'sonar.organization', 'bandrefilipe'
+        property 'sonar.projectKey', 'bandrefilipe_brewer'
+        property 'sonar.projectVersion', props.getProperty('app.version')
         property 'sonar.sourceEncoding', 'UTF-8'
     }
 }
