--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ subprojects {
         properties {
             property 'sonar.sources', 'src/main/java'
             property 'sonar.tests', 'src/test/java'
+            property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
         }
     }
 
@@ -60,6 +61,9 @@ subprojects {
 
     jacocoTestReport {
         dependsOn(test)
+        reports {
+            xml.enabled(true)
+        }
     }
 }
 
