--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ subprojects {
 
     sonarqube {
         properties {
+            property 'sonar.junit.reportPaths', 'build/test-results/test'
             property 'sonar.sources', 'src/main/java'
             property 'sonar.tests', 'src/test/java'
             property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
