#41 Centraliza exclusao do modulo spring-boot-starter-logging no build.gradle raiz

--- a/brewer-application/build.gradle
+++ b/brewer-application/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
     implementation project(':brewer-commons')
+
+    // Spring Boot Starter
+    implementation('org.springframework.boot:spring-boot-starter')
 }
