--- a/adapters/brewer-persistence/build.gradle
+++ b/adapters/brewer-persistence/build.gradle
@@ -7,7 +7,5 @@ dependencies {
     // H2
     runtimeOnly('com.h2database:h2')
     // Spring Boot Starter :: Data JPA
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
-        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
-    }
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 }
