--- a/brewer-commons/build.gradle
+++ b/brewer-commons/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     // Spring Boot Starter :: Log4j2
-    implementation('org.springframework.boot:spring-boot-starter-log4j2')
+    api('org.springframework.boot:spring-boot-starter-log4j2')
 }
