#41 Criar endpoints para consulta por ID e por SKU
* #41 Centraliza exclusao do modulo spring-boot-starter-logging no build.gradle raiz

* #41 Promove a visibilidade da dependencia do spring-boot-starter-log4j2 para API

* #41 Melhora gitignore

* #41 Melhora dockerignore

* #41 Implementa classe utilitaria Strings

* #41 Cria exceptions de dominio

* #41 Implementa value object Id

* #41 Implementa value object SKU

* #41 Cria componentes do caso de uso da cerveja

* #41 Cria componentes da api das cervejas

* #41 Cria componente da persistencia das cervejas

* Atualiza README

* #41 Remove skip da analise do sonarqube para os modulos brewer-application e -commons

* #41 Aumenta cobertura de teste

* #41 Substitui construtor padrao no-args por builder em classe Beer

* #41 Adiciona anotacao @JoinColumn em atributo de associacao BeerEntity#type

* #41 Cria conversores e facade em modulo persistence

* #41 Cria reopsitorio JPA para BeerEntity

* #41 Renomeia DefaultBeerRepository para BeerRepositoryAdapter e implementa buscas por Id e SKU

* #41 Implementa teste de conversao entre domain e entity de Beer

* #41 Migra testes de conversao da cerveja para modulo configuration

* #41 Configura lombok para anotar metodos gerados com @Generated

* #41 Renomeia classe

* #41 Implementa BillPughSingleton em BeerEntityToBeerFunction e move testes para modulo persistence

* #41 Atualiza Header Doc com datas de criacao dos arquivos

* #41 Atualiza Header Doc com datas de criacao dos arquivos

* #41 Atualiza visibilidade dos construtores da classe Beer

* #41 Implementa teste unitario para DefaultConversionFacade#convertToBeer(BeerEntity)

* #41 Cria novos construtores estaticos para value class Id

* #41 Testa classe DefaultBeerService

* #41 Adiciona static factory method SKU#empty() e define defaults para Beer

* #41 Testa Id#valueOf(Integer|Long) contra inputs null

* Configuracoes de File Templates do IntelliJ 

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ subprojects {
         jcenter()
     }
 
+    configurations {
+        implementation.exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+    }
+
     dependencies {
         // JUnit
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -80,18 +84,6 @@ sonarqube {
 }
 
 project(":adapters:brewer-web") {
-    sonarqube {
-        skipProject = true
-    }
-}
-
-project(":brewer-application") {
-    sonarqube {
-        skipProject = true
-    }
-}
-
-project(":brewer-commons") {
     sonarqube {
         skipProject = true
     }
