#43 Configura profile de test

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ subprojects {
     }
 
     test {
+        setJvmArgs([
+                '-Dspring.profiles.active=test'
+        ])
         useJUnitPlatform()
         finalizedBy(jacocoTestReport)
     }
