#43 Cria testes de integracao para recuperacao de cerveja por Id

--- a/brewer-configuration/build.gradle
+++ b/brewer-configuration/build.gradle
@@ -11,4 +11,7 @@ dependencies {
 
     // Spring Boot Starter
     implementation('org.springframework.boot:spring-boot-starter')
+
+    // Spring Boot Starter :: Web
+    testImplementation('org.springframework.boot:spring-boot-starter-web')
 }
