--- a/adapters/brewer-api/build.gradle
+++ b/adapters/brewer-api/build.gradle
@@ -8,6 +8,8 @@ dependencies {
 
     // Spring Boot Starter :: Web
     implementation('org.springframework.boot:spring-boot-starter-web')
+    // Spring Boot Starter :: Validation
+    implementation('org.springframework.boot:spring-boot-starter-validation')
     // Springfox Boot Starter
     implementation("io.springfox:springfox-boot-starter:${springfoxVersion}")
 }
