--- a/.github/workflows/image-master.yml
+++ b/.github/workflows/image-master.yml
@@ -13,11 +13,11 @@ jobs:
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
-          version: latest
+          buildx-version: latest
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build the image
         run: |
           docker buildx build --push \
           --tag bandrefilipe/brewer:stable \
-          --platform linux/amd64,linux/arm/v7,linux/arm64 .
+          --platform linux/amd64,linux/arm64/v8 .
