#48 Altera tag da docker image de latest para edge

--- a/.github/workflows/image-develop.yml
+++ b/.github/workflows/image-develop.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Build the image
         run: |
           docker buildx build --push \
-          --tag bandrefilipe/brewer:latest \
+          --tag bandrefilipe/brewer:edge \
           --platform linux/amd64,linux/arm64/v8 .
